correction 1 delivery date

--- a/public/css/MES/suiviFlux/listeSuiviFlux.css
+++ b/public/css/MES/suiviFlux/listeSuiviFlux.css
@@ -61,3 +61,9 @@
 .progress-td{
     width: 36%;
 }
+
+.jourJ{
+    background-color: rgb(255, 201, 201);
+    color : rgb(255, 67, 67);
+    font-weight : bold;
+}
