--- a/public/css/MES/listeDemandeConfirme.css
+++ b/public/css/MES/listeDemandeConfirme.css
@@ -16,3 +16,38 @@
 tr{
     cursor: pointer;
 }
+
+.titre{
+    display: flex; 
+    align-items: center;
+}
+
+.code {
+    display: flex;
+    gap: 4px;/* Espace entre les cercles */
+}
+
+.circle {
+    border: solid thin black;
+    width: 20px;
+    height: 20px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 24px;
+}
+
+.noOF{
+    background-color: rgb(255, 255, 255);
+    font-size: 12px;
+    color:black;
+}
+
+.hasOF{
+    background-color: rgb(240, 240, 30);
+    font-size: 12px;
+    color:black;
+}
+
