--- a/public/css/MES/suiviFlux/listeSuiviFlux.css
+++ b/public/css/MES/suiviFlux/listeSuiviFlux.css
@@ -1,12 +1,16 @@
 .row {
     display: flex;
-    gap: 1%;
+    /* gap: 1%; */
     margin-bottom: 2%;
+}
+
+.gep{
+    gap : 1%;
 }
 
 
 .col-left {
-    flex: 2; 
+    flex: 2;
     background-color: white;
     padding: 1%;
     display: flex;
@@ -18,8 +22,9 @@
 }
 
 .col-right {
-    flex: 1; 
+    flex: 1;
     background-color: white;
+    border-radius: 5px  ;
 }
 
 .col-left .table-container {
