first correction calendar ppm

--- a/public/css/LRP/PPM/calendarStyle.css
+++ b/public/css/LRP/PPM/calendarStyle.css
@@ -1,20 +1,19 @@
-/* .fini-text-color{
+.fini-text-color{
     color: #25D366 !important;
-
 }
 
 .fini-back-ground-color{
     background-color: #c8ffd3 !important;
     border: none;
-} */
-
-.fc-daygrid-day-events { 
-    color: #FFD700 !important;
 }
 
-.fc-event {
+.a-venir-back-ground-color{
     background-color: #FFFDD0 !important;
     border: none;
+}
+
+.a-venir-color{
+    color: #FFD700 !important;
 }
 
 .fc-daygrid-event, 
