finish trace and ppm without taux abscenece et taux  a temps

--- a/public/css/LRP/TRACE/calendarTraceStyle.css
+++ b/public/css/LRP/TRACE/calendarTraceStyle.css
@@ -3,24 +3,24 @@
 }
 
 .fini-back-ground-color {
-    background-color: #c8ffd3 !important;
+    background-color: #25d366 !important;
     border: none;
 }
 
 .retard-back-ground-color{
-    background-color: rgb(245, 220, 220)  !important;
+    background-color: rgb(202, 40, 40)  !important;
     border: none;
 }
 
 .a-venir-back-ground-color {
-    background-color: #f2f2f2 !important;
+    background-color: #b3b3b3 !important;
     border: none;
 }
 
 
 
 .a-venir-color {
-    color: rgb(170, 170, 170) !important;
+    color: rgb(210, 210, 210) !important;
 }
 
 .fc-daygrid-event,
