--- a/public/css/COMPLIANCE/auditInterne/listeConstat.css
+++ b/public/css/COMPLIANCE/auditInterne/listeConstat.css
@@ -72,3 +72,39 @@ h4 {
     page-break-inside: avoid;
 }
 
+.code {
+    display: flex;
+    gap: 4px;/* Espace entre les cercles */
+}
+
+.circle {
+    width: 20px;
+    height: 20px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 24px;
+}
+
+.noOF{
+    background-color: rgb(255, 255, 255);
+    font-size: 12px;
+    color:black;
+}
+
+.resolu{
+    background-color: #7ED321;
+    font-size: 12px;
+}
+
+.a_traiter{
+    background-color: #FFAA16;
+    font-size: 12px;
+}
+
+.retard{
+    background-color: #FF1616;
+    font-size: 12px;
+}
