--- a/public/css/COMPLIANCE/auditInterne/listeConstat.css
+++ b/public/css/COMPLIANCE/auditInterne/listeConstat.css
@@ -23,53 +23,9 @@
 }
 
 
-/* Style pour le logo */
-.img-fluid {
-    max-width: 50%;
-    height: auto;
-    /* margin-left: -56%; */
-}
-
-.img-loi {
-    max-width: 50%;
-    height: auto;
-    margin-left: -56%;
-}
-
 /* Style pour les titres et les paragraphes */
 h4 {
     color: #333;
-}
-
-/* Style pour la table */
-.table {
-    margin-top: 20px;
-    font-size: 1em;
-}
-
-.table th, .table td {
-    padding: 10px;
-    text-align: left;
-}
-
-.table thead th {
-    background-color: #f7f7f7;
-    border-color: #ddd;
-}
-
-.table-bordered {
-    border: 1px solid #ddd;
-}
-
-
-.table-responsive td {
-    word-wrap: break-word; /* Permet au texte de passer à la ligne */
-    white-space: normal;   /* Permet les retours à la ligne */
-    max-width: 200px;      /* Limite la largeur de la cellule */
-}
-
-.table tr {
-    page-break-inside: avoid;
 }
 
 .code {
@@ -88,12 +44,6 @@ h4 {
     font-size: 24px;
 }
 
-.noOF{
-    background-color: rgb(255, 255, 255);
-    font-size: 12px;
-    color:black;
-}
-
 .resolu{
     background-color: #7ED321;
     font-size: 12px;
@@ -107,4 +57,32 @@ h4 {
 .retard{
     background-color: #FF1616;
     font-size: 12px;
+}
+
+.id-cell {
+    white-space: nowrap; /* Empêche le texte de passer à la ligne */
+}
+
+.photo {
+    height: 250px;
+    position: relative;
+    overflow: hidden; /* Assure que l'image ne dépasse pas le div */
+}
+
+.photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Assure que l'image couvre tout le div sans déformation */
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.highlight {
+    background-color: #c7eecf; /* Couleur vert clair */
+}
+
+tr {
+    cursor: pointer;
+    transition: background-color 0.5s ease; /* Transition douce pour le changement de couleur */
 }
